--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       
       - run:
           name: Build ...
-          command: sleep 5 && echo ok
+          command: sleep 5 && echo ok && exit 1
 
       - deploy:
           name: Deploying ...
