--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
 
     steps:
       - checkout
-      - run: echo uploading assets into cloud .... && sleep 5
+      - run: echo uploading assets into cloud gg  .... && sleep 5
 
 workflows:
   version: 2
